# sqlite_to_scylla

./: Cargo.toml  sqlite2scylla.c
src/: main.rs
