[package]
name = "sqlite-to-scylla-migration"
version = "0.1.0"
edition = "2018"

[dependencies]
rusqlite = "0.31.0"
scylla = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.14"

[dependencies.async-trait]
version = "0.1.51"
